--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -118,9 +118,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Germany\n",
+            "83.2\n"
+          ]
+        }
+      ],
       "source": [
         "country = \"Germany\"\n",
         "population = 83.2  # millions\n",
@@ -151,7 +160,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'str'>\n",
+            "<class 'float'>\n",
+            "<class 'bool'>\n"
+          ]
+        }
+      ],
       "source": [
         "print(type(country))  # str\n",
         "print(type(population))  # float\n",
@@ -219,7 +238,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "### YOUR CODE HERE ###\n"
+        "### YOUR CODE HERE\n",
+        "country_name = \"China\"\n",
+        "population_millions = 1409.0\n",
+        "gdp_billions = 18740.0\n",
+        "is_eu_member = False"
       ]
     },
     {
