Complete extra excercise 1

--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -118,18 +118,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Germany\n",
-            "83.2\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "country = \"Germany\"\n",
         "population = 83.2  # millions\n",
@@ -160,17 +151,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'str'>\n",
-            "<class 'float'>\n",
-            "<class 'bool'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(type(country))  # str\n",
         "print(type(population))  # float\n",
@@ -260,7 +241,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "### YOUR CODE HERE ###\n"
+        "### YOUR CODE HERE ###\n",
+        "type(country_name)  # str\n",
+        "type(population_millions)  # float\n",
+        "type(gdp_billions)  # float\n",
+        "type(is_eu_member)  # bool"
       ]
     },
     {
