--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -189,10 +189,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "x = 10          # x is an int\n",
+        "x = 10  # x is an int\n",
         "print(type(x))\n",
         "\n",
-        "x = \"ten\"       # now x is a str\n",
+        "x = \"ten\"  # now x is a str\n",
         "print(type(x))"
       ]
     },
@@ -367,7 +367,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "### YOUR CODE HERE ###\n"
+        "### YOUR CODE HERE ###\n",
+        "gdp_per_capita_china = (gdp_billions * 1000) / population_millions\n",
+        "is_high_income_china = gdp_per_capita_china > 40000\n",
+        "\n",
+        "print(f\"GDP per capita of China: {gdp_per_capita_china}\")\n",
+        "print(f\"Is China high income? {'Yes' if is_high_income_china else 'No'}\")"
       ]
     },
     {
@@ -385,7 +390,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "### YOUR CODE HERE ###\n"
+        "### YOUR CODE HERE ###\n",
+        "is_major_eu_economy = is_eu_member and gdp_per_capita_china > 30000\n",
+        "is_major_eu_economy_text = \"is\" if is_major_eu_economy else \"is not\"\n",
+        "print(f\"China {is_major_eu_economy_text} a major EU economy.\")"
       ]
     },
     {
