--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -458,8 +458,8 @@
       "source": [
         "text = \"  Social Data Science  \"\n",
         "\n",
-        "print(text.strip())         # Remove extra spaces\n",
-        "print(text.lower())         # All lowercase\n",
+        "print(text.strip())  # Remove extra spaces\n",
+        "print(text.lower())  # All lowercase\n",
         "print(text.replace(\"Data\", \"Political\"))  # Substitution"
       ]
     },
@@ -526,7 +526,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "### YOUR CODE HERE ###\n"
+        "### YOUR CODE HERE ###\n",
+        "print(\n",
+        "    f\"{country_name} has a GDP per capita of ${gdp_per_capita_china:,.2f} and is {'not' if not is_eu_member else ''} an EU member.\"\n",
+        ")"
       ]
     },
     {
@@ -551,7 +554,9 @@
       "outputs": [],
       "source": [
         "### YOUR CODE HERE ###\n",
-        "messy_text = \"  UK, France, Germany, Italy, Spain  \"\n"
+        "messy_text = \"  UK, France, Germany, Italy, Spain  \"\n",
+        "text = messy_text.strip().replace(\"UK\", \"United Kingdom\").upper()\n",
+        "print(text)"
       ]
     },
     {
