--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -902,7 +902,14 @@
    "outputs": [],
    "source": [
     "### YOUR CODE HERE ###\n",
-    "turnout = 62\n"
+    "turnout = 62\n",
+    "\n",
+    "if turnout < 50:\n",
+    "    print(\"Low turnout\")\n",
+    "elif 50 <= turnout <= 70:\n",
+    "    print(\"Moderate turnout\")\n",
+    "else:\n",
+    "    print(\"High turnout\")"
    ]
   },
   {
@@ -932,7 +939,22 @@
    "source": [
     "### YOUR CODE HERE ###\n",
     "turnout = 45\n",
-    "is_national = False\n"
+    "is_national = False\n",
+    "\n",
+    "if is_national:\n",
+    "    if turnout < 50:\n",
+    "        print(\"Low turnout\")\n",
+    "    elif 50 <= turnout <= 70:\n",
+    "        print(\"Moderate turnout\")\n",
+    "    else:\n",
+    "        print(\"High turnout\")\n",
+    "else:\n",
+    "    if turnout < 30:\n",
+    "        print(\"Low turnout\")\n",
+    "    elif 30 <= turnout <= 50:\n",
+    "        print(\"Moderate turnout\")\n",
+    "    else:\n",
+    "        print(\"High turnout\")"
    ]
   },
   {
