--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -904,12 +904,17 @@
     "### YOUR CODE HERE ###\n",
     "turnout = 62\n",
     "\n",
-    "if turnout < 50:\n",
-    "    print(\"Low turnout\")\n",
-    "elif 50 <= turnout <= 70:\n",
-    "    print(\"Moderate turnout\")\n",
-    "else:\n",
-    "    print(\"High turnout\")"
+    "\n",
+    "def classify_turnout(turnout):\n",
+    "    if turnout < 50:\n",
+    "        return \"Low turnout\"\n",
+    "    elif 50 <= turnout <= 70:\n",
+    "        return \"Moderate turnout\"\n",
+    "    else:\n",
+    "        return \"High turnout\"\n",
+    "\n",
+    "\n",
+    "print(classify_turnout(turnout))"
    ]
   },
   {
@@ -1043,7 +1048,7 @@
     "        category = \"Moderate\"\n",
     "    else:\n",
     "        category = \"High\"\n",
-    "    \n",
+    "\n",
     "    print(f\"{turnout}% → {category}\")"
    ]
   },
@@ -1074,7 +1079,7 @@
     "# Build a new list\n",
     "squared = []\n",
     "for num in numbers:\n",
-    "    squared.append(num ** 2)\n",
+    "    squared.append(num**2)\n",
     "\n",
     "print(f\"Squared: {squared}\")"
    ]
@@ -1126,7 +1131,10 @@
    "outputs": [],
    "source": [
     "### YOUR CODE HERE ###\n",
-    "turnouts = [45, 62, 78, 55, 38, 71, 69]\n"
+    "turnouts = [45, 62, 78, 55, 38, 71, 69]\n",
+    "\n",
+    "for turnout in turnouts:\n",
+    "    print(f\"{turnout}% - {classify_turnout(turnout)}\")"
    ]
   },
   {
@@ -1152,7 +1160,21 @@
    "outputs": [],
    "source": [
     "### YOUR CODE HERE ###\n",
-    "turnouts = [45, 62, 78, 55, 38, 71, 69]\n"
+    "turnouts = [45, 62, 78, 55, 38, 71, 69]\n",
+    "low_count = 0\n",
+    "moderate_count = 0\n",
+    "high_count = 0\n",
+    "for turnout in turnouts:\n",
+    "    match classify_turnout(turnout):\n",
+    "        case \"Low turnout\":\n",
+    "            low_count += 1\n",
+    "        case \"Moderate turnout\":\n",
+    "            moderate_count += 1\n",
+    "        case \"High turnout\":\n",
+    "            high_count += 1\n",
+    "print(f\"Low: {low_count} elections\")\n",
+    "print(f\"Moderate: {moderate_count} elections\")\n",
+    "print(f\"High: {high_count} elections\")"
    ]
   },
   {
