--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -905,7 +905,7 @@
     "turnout = 62\n",
     "\n",
     "\n",
-    "def classify_turnout(turnout):\n",
+    "def classify_turnout(turnout: int) -> str:\n",
     "    if turnout < 50:\n",
     "        return \"Low turnout\"\n",
     "    elif 50 <= turnout <= 70:\n",
@@ -1204,7 +1204,7 @@
    "source": [
     "### YOUR CODE HERE ###\n",
     "countries = [\"Germany\", \"France\", \"UK\", \"Italy\", \"Spain\"]\n",
-    "populations = [83.2, 67.8, 67.0, 59.1, 47.4]\n"
+    "populations = [83.2, 67.8, 67.0, 59.1, 47.4]"
    ]
   },
   {
@@ -1243,6 +1243,7 @@
     "    \"\"\"Return a greeting for the given name.\"\"\"\n",
     "    return f\"Hello, {name}!\"\n",
     "\n",
+    "\n",
     "# Call the function\n",
     "message = greet(\"World\")\n",
     "print(message)\n",
@@ -1267,6 +1268,7 @@
     "    \"\"\"Calculate GDP per capita from GDP (billions) and population (millions).\"\"\"\n",
     "    gdp_per_capita = (gdp_billions * 1000) / population_millions\n",
     "    return gdp_per_capita\n",
+    "\n",
     "\n",
     "# Germany\n",
     "germany_gdp_pc = calculate_gdp_per_capita(4072.6, 83.2)\n",
@@ -1299,9 +1301,10 @@
     "    else:\n",
     "        return \"High\"\n",
     "\n",
+    "\n",
     "# Use default thresholds\n",
-    "print(classify_turnout(45))        # Low\n",
-    "print(classify_turnout(65))        # Moderate\n",
+    "print(classify_turnout(45))  # Low\n",
+    "print(classify_turnout(65))  # Moderate\n",
     "\n",
     "# Use custom thresholds for local elections\n",
     "print(classify_turnout(45, low_threshold=30, high_threshold=50))  # Moderate"
@@ -1330,6 +1333,7 @@
     "    print(f\"GDP: ${gdp}B\")\n",
     "    print(f\"GDP per capita: ${gdp_pc:,.0f}\")\n",
     "    print()\n",
+    "\n",
     "\n",
     "print_report(\"Germany\", 83.2, 4072.6)\n",
     "print_report(\"France\", 67.8, 2782.9)"
@@ -1371,7 +1375,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### YOUR CODE HERE ###\n"
+    "### YOUR CODE HERE ###\n",
+    "def classify_turnout(turnout, low_threshold=50, high_threshold=70):\n",
+    "    \"\"\"Classify voter turnout into Low, Moderate, or High.\"\"\"\n",
+    "    if turnout < low_threshold:\n",
+    "        return \"Low\"\n",
+    "    elif turnout <= high_threshold:\n",
+    "        return \"Moderate\"\n",
+    "    else:\n",
+    "        return \"High\"\n",
+    "\n",
+    "\n",
+    "print(classify_turnout(45))\n",
+    "print(classify_turnout(62))\n",
+    "print(classify_turnout(78))"
    ]
   },
   {
@@ -1406,7 +1423,28 @@
    "outputs": [],
    "source": [
     "### YOUR CODE HERE ###\n",
-    "polls = [42, 45, 44, 47, 51, 48, 52]\n"
+    "polls = [42, 45, 44, 47, 51, 48, 52]\n",
+    "\n",
+    "\n",
+    "def summarize_polls(polls: list[int]) -> dict[str, float | None]:\n",
+    "    \"\"\"Return summary statistics for a list of poll results.\"\"\"\n",
+    "    count = len(polls)\n",
+    "    average = sum(polls) / count if count > 0 else 0\n",
+    "    minimum = min(polls) if polls else None\n",
+    "    maximum = max(polls) if polls else None\n",
+    "\n",
+    "    return {\n",
+    "        \"count\": count,\n",
+    "        \"average\": average,\n",
+    "        \"min\": minimum,\n",
+    "        \"max\": maximum,\n",
+    "        \"range\": (maximum - minimum)\n",
+    "        if minimum is not None and maximum is not None\n",
+    "        else None,\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "print(summarize_polls(polls))"
    ]
   },
   {
