--- a/Week 1/W1_python_intro_revised.ipynb
+++ b/Week 1/W1_python_intro_revised.ipynb
@@ -1506,10 +1506,34 @@
    "source": [
     "### YOUR CODE HERE ###\n",
     "\n",
-    "def analyze_polls(polls, candidate_name):\n",
+    "\n",
+    "def analyze_polls(polls: list[int], candidate_name: str) -> str:\n",
     "    \"\"\"Analyze a list of poll results and return a summary.\"\"\"\n",
-    "    # Your code here\n",
-    "    pass\n",
+    "    count = len(polls)\n",
+    "    average = sum(polls) / count if count > 0 else None\n",
+    "    minimum = min(polls) if polls else None\n",
+    "    maximum = max(polls) if polls else None\n",
+    "\n",
+    "    first_half_average = sum(polls[: count // 2]) / (count // 2) if count > 0 else None\n",
+    "    second_half_average = (\n",
+    "        sum(polls[count // 2 :]) / (count - count // 2) if count > 0 else None\n",
+    "    )\n",
+    "\n",
+    "    trend = (\n",
+    "        \"Rising\"\n",
+    "        if second_half_average > first_half_average\n",
+    "        else \"Falling\"\n",
+    "        if second_half_average < first_half_average\n",
+    "        else \"stable\"\n",
+    "    )\n",
+    "\n",
+    "    return f\"\"\"\n",
+    "    === Poll Analysis: {candidate_name} ===\n",
+    "    Polls analyzed: {count}\n",
+    "    Average: {average:.2f}%\n",
+    "    Range: {minimum}% - {maximum}%\n",
+    "    Trend: {trend}\n",
+    "    \"\"\"\n",
     "\n",
     "\n",
     "# Test your function\n",
@@ -1553,8 +1577,18 @@
     "election_data = {\n",
     "    \"Candidate A\": [42, 45, 44, 47, 51, 48, 52],\n",
     "    \"Candidate B\": [48, 46, 47, 44, 40, 43, 39],\n",
-    "    \"Candidate C\": [10, 9, 9, 9, 9, 9, 9]\n",
-    "}\n"
+    "    \"Candidate C\": [10, 9, 9, 9, 9, 9, 9],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def analyze_polls_batch(election_data: dict[str, list[int]]) -> None:\n",
+    "    \"\"\"Analyze polls for multiple candidates and print summaries.\"\"\"\n",
+    "    for candidate, polls in election_data.items():\n",
+    "        summary = analyze_polls(polls, candidate)\n",
+    "        print(summary)\n",
+    "\n",
+    "\n",
+    "analyze_polls_batch(election_data)"
    ]
   },
   {
