--- a/archive/W2_numpy.ipynb
+++ b/archive/W2_numpy.ipynb
@@ -473,7 +473,7 @@
       },
       "outputs": [],
       "source": [
-        "arr_3d[:, -1, -1]  # get second matrix, second row, third column value"
+        "arr_3d[:, -1, -1]  # get every matrix's last row, last column value"
       ]
     },
     {
