Fix spelling typo

--- a/archive/W2_numpy.ipynb
+++ b/archive/W2_numpy.ipynb
@@ -757,7 +757,7 @@
         "id": "0m9EqkUM4al5"
       },
       "source": [
-        "#### Excersies"
+        "#### Exercises"
       ]
     },
     {
