--- a/archive/W2_numpy.ipynb
+++ b/archive/W2_numpy.ipynb
@@ -769,16 +769,22 @@
       "outputs": [],
       "source": [
         "# 1: get the third column across the entirery of arr_3d\n",
+        "print(arr_3d[:, :, 2])\n",
         "\n",
         "# 2: get the entire second row of the third matrix of arr_3d\n",
+        "print(arr_3d[2, 1, :])\n",
         "\n",
         "# 3: get the first matrix, last row, middle column of arr_3d\n",
+        "print(arr_3d[0, -1, 1])\n",
         "\n",
         "# 4: extract every other column from the second matrix of arr_3d\n",
+        "print(arr_3d[1, :, ::2])\n",
         "\n",
         "# 5: get the diagonal elements of the first matrix in arr_3d: hint: use np.diag()\n",
+        "print(np.diag(arr_3d[0]))\n",
         "\n",
-        "# 6: get the elements just below diagonal of the second matrix in arr_3d\n"
+        "# 6: get the elements just below diagonal of the second matrix in arr_3d\n",
+        "print(np.diag(arr_3d[1], k=-1))"
       ]
     },
     {
