W2: format and complete exercise 3

--- a/archive/W2_numpy.ipynb
+++ b/archive/W2_numpy.ipynb
@@ -1024,7 +1024,7 @@
       },
       "outputs": [],
       "source": [
-        "rand_arr[rand_arr==3] # pick up elements equal to the specified value"
+        "rand_arr[rand_arr == 3]  # pick up elements equal to the specified value"
       ]
     },
     {
@@ -1039,7 +1039,7 @@
       },
       "outputs": [],
       "source": [
-        "rand_arr[rand_arr!=3] # pick up elements that are not equal to the specified value"
+        "rand_arr[rand_arr != 3]  # pick up elements that are not equal to the specified value"
       ]
     },
     {
@@ -1054,7 +1054,7 @@
       },
       "outputs": [],
       "source": [
-        "mask = (rand_arr > 3) & (rand_arr < 7) # multiple conditions\n",
+        "mask = (rand_arr > 3) & (rand_arr < 7)  # multiple conditions\n",
         "rand_arr[mask]"
       ]
     },
@@ -1080,7 +1080,7 @@
       "outputs": [],
       "source": [
         "np.random.seed(42)\n",
-        "rand_arr_3d = np.random.randint(15, size=81).reshape(3,3,9)\n",
+        "rand_arr_3d = np.random.randint(15, size=81).reshape(3, 3, 9)\n",
         "rand_arr_3d"
       ]
     },
@@ -1093,10 +1093,15 @@
       "outputs": [],
       "source": [
         "# 1: replace all elements in the first matrix that are greater than 8 with zero\n",
+        "mask = rand_arr_3d[0] > 8\n",
+        "rand_arr_3d[0][mask] = 0\n",
         "\n",
         "# 2: select all odd-indexed columns from the second matrix\n",
+        "rand_arr_3d[1, :, ::2]\n",
         "\n",
-        "# 3: create a mask to select elements that are both greater than 2 and less than 12\n"
+        "# 3: create a mask to select elements that are both greater than 2 and less than 12\n",
+        "mask = (rand_arr_3d > 2) & (rand_arr_3d < 12)\n",
+        "rand_arr_3d[mask]"
       ]
     },
     {
