--- a/archive/W2_numpy.ipynb
+++ b/archive/W2_numpy.ipynb
@@ -1187,7 +1187,7 @@
       },
       "outputs": [],
       "source": [
-        "np.add(arr, 5) # add five to every element"
+        "np.add(arr, 5)  # add five to every element"
       ]
     },
     {
@@ -1202,7 +1202,7 @@
       },
       "outputs": [],
       "source": [
-        "arr + 5 # equivalent"
+        "arr + 5  # equivalent"
       ]
     },
     {
@@ -1233,7 +1233,7 @@
       },
       "outputs": [],
       "source": [
-        "arr * arr2 # multiply corresponding elements"
+        "arr * arr2  # multiply corresponding elements"
       ]
     },
     {
@@ -1248,7 +1248,7 @@
       },
       "outputs": [],
       "source": [
-        "arr.mean() # mean of arr"
+        "arr.mean()  # mean of arr"
       ]
     },
     {
@@ -1263,7 +1263,7 @@
       },
       "outputs": [],
       "source": [
-        "arr.std() # std, by default population std\n",
+        "arr.std()  # std, by default population std\n",
         "# arr.std(ddof=1) # std with bessels correction"
       ]
     },
@@ -1279,7 +1279,7 @@
       },
       "outputs": [],
       "source": [
-        "arr = arr.reshape(5,2)\n",
+        "arr = arr.reshape(5, 2)\n",
         "arr"
       ]
     },
@@ -1297,7 +1297,7 @@
       "source": [
         "# arr.sum() # summs all elements\n",
         "# arr.sum(axis = 1) # sum over rows (across axis 1 which is columns)\n",
-        "arr.sum(axis = 0) # sum over cols (across axis 0 which are rows)"
+        "arr.sum(axis=0)  # sum over cols (across axis 0 which are rows)"
       ]
     },
     {
@@ -1386,7 +1386,7 @@
       },
       "outputs": [],
       "source": [
-        "a = np.array([1,2,3])\n",
+        "a = np.array([1, 2, 3])\n",
         "b = 2\n",
         "print(a.shape)"
       ]
@@ -1429,10 +1429,7 @@
       },
       "outputs": [],
       "source": [
-        "a = np.array([[0, 0, 0],\n",
-        "            [10, 10, 10],\n",
-        "            [20, 20, 20],\n",
-        "            [30, 30, 30]])\n",
+        "a = np.array([[0, 0, 0], [10, 10, 10], [20, 20, 20], [30, 30, 30]])\n",
         "\n",
         "b = np.array([1, 2, 3])\n",
         "\n",
@@ -1451,7 +1448,7 @@
       },
       "outputs": [],
       "source": [
-        "a + b # shapes: (4, 3) + (1, 3)"
+        "a + b  # shapes: (4, 3) + (1, 3)"
       ]
     },
     {
@@ -1477,12 +1474,9 @@
       },
       "outputs": [],
       "source": [
-        "a = np.array([[0, 0, 0],\n",
-        "            [10, 10, 10],\n",
-        "            [20, 20, 20],\n",
-        "            [30, 30, 30]])\n",
+        "a = np.array([[0, 0, 0], [10, 10, 10], [20, 20, 20], [30, 30, 30]])\n",
         "\n",
-        "b = np.array([1, 2, 3, 4]) # added one more element!\n",
+        "b = np.array([1, 2, 3, 4])  # added one more element!\n",
         "\n",
         "print(a.shape, b.shape)"
       ]
@@ -1500,7 +1494,7 @@
       },
       "outputs": [],
       "source": [
-        "a + b # shapes: (4, 3) + (1, 4) will give error bc 3 and 4 not match"
+        "a + b  # shapes: (4, 3) + (1, 4) will give error bc 3 and 4 not match"
       ]
     },
     {
@@ -1575,7 +1569,7 @@
       },
       "outputs": [],
       "source": [
-        "a + b # shapes (4, 1) + (1, 3) compatible!"
+        "a + b  # shapes (4, 1) + (1, 3) compatible!"
       ]
     },
     {
@@ -1623,10 +1617,14 @@
       "outputs": [],
       "source": [
         "# task 1: center each column (subtract the mean of column from every element)\n",
+        "arr_2d = arr_2d - arr_2d.mean(axis=0)\n",
         "\n",
         "# task 2: normalise each row to sum to 1\n",
+        "arr_2d = arr_2d / arr_2d.sum(axis=1, keepdims=True)\n",
         "\n",
-        "# task 3: replace each element with its distance from the array's overall mean"
+        "# task 3: replace each element with its distance from the array's overall mean\n",
+        "arr_2d = np.abs(arr_2d - np.nansum(arr_2d))\n",
+        "print(arr_2d)"
       ]
     },
     {
