W2: Format regression parts

--- a/archive/W2_numpy.ipynb
+++ b/archive/W2_numpy.ipynb
@@ -1717,7 +1717,7 @@
         "    for i in range(epochs):\n",
         "        y_pred = alpha + beta * x\n",
         "        errors = y_true - y_pred\n",
-        "        mse = (errors ** 2).sum() / len(x)\n",
+        "        mse = (errors**2).sum() / len(x)\n",
         "\n",
         "        da = -2 * errors.sum() / len(x)\n",
         "        db = -2 * (errors * x).sum() / len(x)\n",
@@ -1762,9 +1762,9 @@
       "source": [
         "plt.figure(figsize=(10, 5))\n",
         "plt.plot(losses)\n",
-        "plt.title('Loss History during Gradient Descent')\n",
-        "plt.xlabel('Iteration')\n",
-        "plt.ylabel('Sum of Squares')\n",
+        "plt.title(\"Loss History during Gradient Descent\")\n",
+        "plt.xlabel(\"Iteration\")\n",
+        "plt.ylabel(\"Sum of Squares\")\n",
         "plt.tight_layout()\n",
         "plt.show()"
       ]
@@ -1861,13 +1861,13 @@
         "    learning_rate = 0.008\n",
         "    loss_history = []\n",
         "    for i in range(epochs):\n",
-        "        y_pred = X_b @ betas # ([100, 10] x [10,]) + [100,] = [100,]\n",
-        "        errors = y_true - y_pred # [100,]\n",
-        "        mse = (errors ** 2).mean() # [1,]\n",
+        "        y_pred = X_b @ betas  # ([100, 10] x [10,]) + [100,] = [100,]\n",
+        "        errors = y_true - y_pred  # [100,]\n",
+        "        mse = (errors**2).mean()  # [1,]\n",
         "\n",
-        "        db = -2 * (X_b.T @ errors) / len(X_b) # ([10, 100] x [100,]).sum() / [100,]\n",
+        "        db = -2 * (X_b.T @ errors) / len(X_b)  # ([10, 100] x [100,]).sum() / [100,]\n",
         "\n",
-        "        betas -= learning_rate * db # [10,]\n",
+        "        betas -= learning_rate * db  # [10,]\n",
         "        loss_history.append(mse)\n",
         "        if i % 10 == 0:\n",
         "            print(f\"Epoch {i}: Loss = {mse}\")\n",
@@ -1909,9 +1909,9 @@
       "source": [
         "plt.figure(figsize=(10, 5))\n",
         "plt.plot(losses[50:])\n",
-        "plt.title('Loss History during Gradient Descent')\n",
-        "plt.xlabel('Iteration')\n",
-        "plt.ylabel('Sum of Squares')\n",
+        "plt.title(\"Loss History during Gradient Descent\")\n",
+        "plt.xlabel(\"Iteration\")\n",
+        "plt.ylabel(\"Sum of Squares\")\n",
         "plt.tight_layout()\n",
         "plt.show()"
       ]
