--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "_xsnPQdjJX7A"
       },
@@ -133,9 +133,9 @@
         "# Creating a dictionary\n",
         "country_data = {\n",
         "    \"name\": \"France\",\n",
-        "    \"population\": 67,      # millions\n",
+        "    \"population\": 67,  # millions\n",
         "    \"gdp_pc\": 42000,\n",
-        "    \"continent\": \"Europe\"\n",
+        "    \"continent\": \"Europe\",\n",
         "}\n",
         "\n",
         "country_data"
@@ -163,8 +163,8 @@
       "outputs": [],
       "source": [
         "# Adding and modifying entries\n",
-        "country_data[\"capital\"] = \"Paris\"     # add new key\n",
-        "country_data[\"population\"] = 68       # update existing key\n",
+        "country_data[\"capital\"] = \"Paris\"  # add new key\n",
+        "country_data[\"population\"] = 68  # update existing key\n",
         "country_data"
       ]
     },
@@ -291,21 +291,33 @@
         "\n",
         "# 1a) Create a dictionary called `university` with keys: \"name\", \"city\", \"students\", \"founded\"\n",
         "#     Fill in values for Oxford (or your university)\n",
+        "university = {\n",
+        "    \"name\": \"Oxford\",\n",
+        "    \"city\": \"Oxford\",\n",
+        "    \"students\": 26000,\n",
+        "    \"founded\": 1096,\n",
+        "}\n",
         "\n",
         "\n",
         "# 1b) Access and print just the number of students\n",
-        "\n",
+        "print(university[\"students\"])\n",
         "\n",
         "# 1c) Add a new key \"ranking\" with a value\n",
-        "\n",
+        "university[\"ranking\"] = 1\n",
         "\n",
         "# 1d) Using zip(), create a dictionary mapping these EU countries to their EU join year:\n",
         "#     countries: [\"France\", \"Germany\", \"Spain\", \"Poland\"]\n",
         "#     years: [1957, 1957, 1986, 2004]\n",
         "\n",
+        "eu_countries = [\"France\", \"Germany\", \"Spain\", \"Poland\"]\n",
+        "join_years = [1957, 1957, 1986, 2004]\n",
+        "\n",
+        "eu_dict = dict(zip(eu_countries, join_years))\n",
         "\n",
         "# 1e) ⭐ Create a dictionary comprehension that maps numbers 1-5 to their cubes\n",
-        "#     Expected: {1: 1, 2: 8, 3: 27, 4: 64, 5: 125}\n"
+        "#     Expected: {1: 1, 2: 8, 3: 27, 4: 64, 5: 125}\n",
+        "cubes = {x: x**3 for x in range(1, 6)}\n",
+        "print(cubes)"
       ]
     },
     {
@@ -1511,16 +1523,7 @@
       "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.1"
+      "name": "python"
     }
   },
   "nbformat": 4,
