--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -342,8 +342,8 @@
         "# Dictionary of lists → DataFrame\n",
         "data = {\n",
         "    \"country\": [\"UK\", \"France\", \"Germany\", \"Spain\"],\n",
-        "    \"population\": [67, 68, 83, 47],        # millions\n",
-        "    \"gdp_pc\": [42000, 40000, 46000, 30000]  # USD\n",
+        "    \"population\": [67, 68, 83, 47],  # millions\n",
+        "    \"gdp_pc\": [42000, 40000, 46000, 30000],  # USD\n",
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
@@ -391,7 +391,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"Shape:\", df.shape)          # (rows, columns)\n",
+        "print(\"Shape:\", df.shape)  # (rows, columns)\n",
         "print(\"Columns:\", df.columns.tolist())\n",
         "print(\"Index:\", df.index.tolist())\n",
         "print(\"Data types:\\n\", df.dtypes)"
@@ -445,18 +445,29 @@
         "#     City: London, Birmingham, Manchester, Leeds, Glasgow\n",
         "#     Population (thousands): 8982, 1141, 553, 793, 635\n",
         "#     Area (sq km): 1572, 268, 116, 552, 175\n",
+        "cities = {\n",
+        "    \"City\": [\"London\", \"Birmingham\", \"Manchester\", \"Leeds\", \"Glasgow\"],\n",
+        "    \"Population\": [8982, 1141, 553, 793, 635],  # thousands\n",
+        "    \"Area\": [1572, 268, 116, 552, 175],  # sq km\n",
+        "}\n",
         "\n",
+        "cities = pd.DataFrame(cities)\n",
+        "cities\n",
         "\n",
         "# 2b) Set the city name as the index\n",
-        "\n",
+        "cities = cities.set_index(\"City\")\n",
         "\n",
         "# 2c) Add a column \"density\" = population / area\n",
+        "cities[\"Density\"] = cities[\"Population\"] / cities[\"Area\"]\n",
         "\n",
         "\n",
         "# 2d) Print the shape and column names\n",
-        "\n",
+        "print(\"Shape:\", cities.shape)\n",
+        "print(\"Columns:\", cities.columns.tolist())\n",
         "\n",
         "# 2e) ⭐ Add a column \"size_category\": \"large\" if population > 1000, else \"medium\"\n",
+        "cities[\"Size_Category\"] = np.where(cities[\"Population\"] > 1000, \"large\", \"medium\")\n",
+        "print(cities[\"Size_Category\"].tolist())\n",
         "#     Hint: use np.where(condition, value_if_true, value_if_false)\n"
       ]
     },
