--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -576,7 +576,7 @@
       "outputs": [],
       "source": [
         "# Rows AND columns\n",
-        "df.loc[\"France\", \"gdp_pc\"]              # single value\n",
+        "df.loc[\"France\", \"gdp_pc\"]  # single value\n",
         "df.loc[[\"UK\", \"France\"], [\"population\", \"gdp_pc\"]]  # subset"
       ]
     },
@@ -671,29 +671,30 @@
         "# Exercise 3: Selection and Filtering\n",
         "\n",
         "# First, recreate cities if needed:\n",
-        "cities = pd.DataFrame({\n",
-        "    \"population\": [8982, 1141, 553, 793, 635],\n",
-        "    \"area\": [1572, 268, 116, 552, 175]\n",
-        "}, index=[\"London\", \"Birmingham\", \"Manchester\", \"Leeds\", \"Glasgow\"])\n",
+        "cities = pd.DataFrame(\n",
+        "    {\"population\": [8982, 1141, 553, 793, 635], \"area\": [1572, 268, 116, 552, 175]},\n",
+        "    index=[\"London\", \"Birmingham\", \"Manchester\", \"Leeds\", \"Glasgow\"],\n",
+        ")\n",
         "cities[\"density\"] = cities[\"population\"] / cities[\"area\"]\n",
         "\n",
         "# 3a) Select just the population column\n",
-        "\n",
+        "cities[\"density\"].tolist()\n",
         "\n",
         "# 3b) Select population and density for Birmingham only (use loc)\n",
-        "\n",
+        "cities.loc[\"Birmingham\", [\"population\", \"density\"]]\n",
         "\n",
         "# 3c) Select the first 3 rows using iloc\n",
-        "\n",
+        "cities.iloc[0:3]\n",
         "\n",
         "# 3d) Filter to cities with population > 700 thousand\n",
-        "\n",
+        "cities[cities[\"population\"] > 700]\n",
         "\n",
         "# 3e) Filter to cities with density > 4 AND area > 200\n",
-        "\n",
+        "cities[(cities[\"density\"] > 4) & (cities[\"area\"] > 200)]\n",
         "\n",
         "# 3f) ⭐ Select population for [\"London\", \"Glasgow\"] using loc,\n",
-        "#     then calculate their combined population\n"
+        "#     then calculate their combined population\n",
+        "cities.loc[[\"London\", \"Glasgow\"], \"population\"].sum()"
       ]
     },
     {
