--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -731,7 +731,7 @@
       "outputs": [],
       "source": [
         "# Load the dataset\n",
-        "qog = pd.read_csv(\"/content/Intro-to-Python-DPIR/datasets/qog2022.csv\")\n",
+        "qog = pd.read_csv(\"datasets/qog2022.csv\")\n",
         "\n",
         "# First look\n",
         "qog.head()"
