--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -849,22 +849,30 @@
         "# Exercise 4: Exploring QOG\n",
         "\n",
         "# 4a) How many countries are in the dataset?\n",
-        "\n",
+        "print(f\"There are {qog['country'].nunique()} countries in the dataset.\")\n",
         "\n",
         "# 4b) What is the mean GDP per capita across all countries?\n",
-        "\n",
+        "print(f\"Mean GDP per capita: {qog['gdp_pc'].mean():.2f}\")\n",
         "\n",
         "# 4c) How many countries are in each region? (use value_counts)\n",
+        "print(f\"Countries per region:\\n{qog['region'].value_counts()}\")\n",
         "\n",
         "\n",
         "# 4d) Filter to European countries only. How many are there?\n",
-        "\n",
+        "print(\n",
+        "    f\"There are {qog[qog['region'] == 'Europe']['country'].nunique()} European countries in the dataset.\"\n",
+        ")\n",
         "\n",
         "# 4e) Filter to countries that are both \"Free\" AND have HDI > 0.9\n",
         "#     How many countries meet both criteria?\n",
+        "print(\n",
+        "    f\"There are {qog[(qog['fh_status'] == 'Free') & (qog['hdi'] > 0.9)]['country'].nunique()} countries that are Free and have HDI > 0.9.\"\n",
+        ")\n",
         "\n",
-        "\n",
-        "# 4f) ⭐ What are the 5 most corrupt countries? (hint: sort_values, tail or head)\n"
+        "# 4f) ⭐ What are the 5 most corrupt countries? (hint: sort_values, tail or head)\n",
+        "print(\n",
+        "    f\"The 5 most corrupt countries are: {', '.join(qog.sort_values(by='corruption', ascending=False).head(5)['country'].tolist())}\"\n",
+        ")"
       ]
     },
     {
