--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -970,15 +970,11 @@
       "outputs": [],
       "source": [
         "# Example: Two DataFrames with a shared column\n",
-        "df1 = pd.DataFrame({\n",
-        "    \"country\": [\"UK\", \"France\", \"Germany\"],\n",
-        "    \"population\": [67, 68, 83]\n",
-        "})\n",
+        "df1 = pd.DataFrame({\"country\": [\"UK\", \"France\", \"Germany\"], \"population\": [67, 68, 83]})\n",
         "\n",
-        "df2 = pd.DataFrame({\n",
-        "    \"country\": [\"UK\", \"France\", \"Spain\"],\n",
-        "    \"capital\": [\"London\", \"Paris\", \"Madrid\"]\n",
-        "})\n",
+        "df2 = pd.DataFrame(\n",
+        "    {\"country\": [\"UK\", \"France\", \"Spain\"], \"capital\": [\"London\", \"Paris\", \"Madrid\"]}\n",
+        ")\n",
         "\n",
         "print(\"df1:\")\n",
         "print(df1)\n",
@@ -1052,33 +1048,47 @@
         "# Exercise 5: Combining data\n",
         "\n",
         "# Here's election data from two rounds:\n",
-        "round1 = pd.DataFrame({\n",
-        "    \"candidate\": [\"Alice\", \"Bob\", \"Carol\"],\n",
-        "    \"votes_r1\": [3500, 4200, 2900],\n",
-        "    \"party\": [\"Red\", \"Blue\", \"Red\"]\n",
-        "})\n",
+        "round1 = pd.DataFrame(\n",
+        "    {\n",
+        "        \"candidate\": [\"Alice\", \"Bob\", \"Carol\"],\n",
+        "        \"votes_r1\": [3500, 4200, 2900],\n",
+        "        \"party\": [\"Red\", \"Blue\", \"Red\"],\n",
+        "    }\n",
+        ")\n",
         "\n",
-        "round2 = pd.DataFrame({\n",
-        "    \"candidate\": [\"Alice\", \"Bob\", \"Dave\"],\n",
-        "    \"votes_r2\": [4100, 3800, 5000]\n",
-        "})\n",
+        "round2 = pd.DataFrame(\n",
+        "    {\"candidate\": [\"Alice\", \"Bob\", \"Dave\"], \"votes_r2\": [4100, 3800, 5000]}\n",
+        ")\n",
         "\n",
         "# 5a) Merge round1 and round2 using an inner join. Who appears in both rounds?\n",
+        "inner_merged = pd.merge(round1, round2, on=\"candidate\", how=\"inner\")\n",
+        "print(f\"Candidates in both rounds: {', '.join(inner_merged['candidate'].tolist())}\")\n",
         "\n",
         "\n",
         "# 5b) Merge using a left join (keep all candidates from round1)\n",
         "#     Who has NaN for votes_r2?\n",
         "\n",
+        "left_merged = pd.merge(round1, round2, on=\"candidate\", how=\"left\")\n",
+        "print(\n",
+        "    f\"Candidates from round1 with no votes in round2: {', '.join(left_merged[left_merged['votes_r2'].isna()]['candidate'].tolist())}\"\n",
+        ")\n",
+        "\n",
         "\n",
         "# 5c) Using the left-merged result, create a column \"total_votes\" = votes_r1 + votes_r2\n",
         "#     (Note: NaN + number = NaN)\n",
+        "left_merged[\"total_votes\"] = left_merged[\"votes_r1\"] + left_merged[\"votes_r2\"]\n",
         "\n",
         "\n",
         "# 5d) Group the inner-merged result by party and calculate total votes_r1 per party\n",
-        "\n",
+        "inner_merged_grouped = inner_merged.groupby(\"party\")[\"votes_r1\"].sum()\n",
+        "print(\"Total votes in round 1 per party:\")\n",
+        "print(inner_merged_grouped)\n",
         "\n",
         "# 5e) ⭐ Merge round1 and round2 with outer join, then fill NaN values with 0\n",
-        "#     Hint: use .fillna(0) on the result\n"
+        "#     Hint: use .fillna(0) on the result\n",
+        "outer_merged = pd.merge(round1, round2, on=\"candidate\", how=\"outer\").fillna(0)\n",
+        "print(\"Outer merged DataFrame with NaNs filled with 0:\")\n",
+        "print(outer_merged)"
       ]
     },
     {
