W3: correct more paths

--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -1115,7 +1115,7 @@
         "# Work through each step to build a complete analysis.\n",
         "\n",
         "# 6a) Load the QOG data (if not already loaded)\n",
-        "qog = pd.read_csv(\"/content/Intro-to-Python-DPIR/datasets/qog2022.csv\")\n",
+        "qog = pd.read_csv(\"datasets/qog2022.csv\")\n",
         "\n",
         "# 6b) How many countries are \"Free\", \"Partly Free\", and \"Not Free\"?\n",
         "\n",
@@ -1143,7 +1143,7 @@
         "\n",
         "\n",
         "# 6h) Load the PPI (Parliamentary Powers Index) data and merge with qog:\n",
-        "ppi = pd.read_csv(\"/content/Intro-to-Python-DPIR/datasets/ppi.csv\")\n",
+        "ppi = pd.read_csv(\"datasets/ppi.csv\")\n",
         "# Merge keeping all qog countries (left join)\n",
         "\n",
         "\n",
