--- a/Week 3/W3_pandas_revised.ipynb
+++ b/Week 3/W3_pandas_revised.ipynb
@@ -1118,18 +1118,27 @@
         "qog = pd.read_csv(\"datasets/qog2022.csv\")\n",
         "\n",
         "# 6b) How many countries are \"Free\", \"Partly Free\", and \"Not Free\"?\n",
+        "print(qog[\"fh_status\"].value_counts())\n",
         "\n",
         "\n",
         "# 6c) Calculate mean GDP per capita by freedom status.\n",
         "#     Which status has the highest average GDP?\n",
+        "print(\"Mean GDP per capita by freedom status:\")\n",
+        "print(qog.groupby(\"fh_status\")[\"gdp_pc\"].mean())\n",
         "\n",
         "\n",
         "# 6d) Filter to only African and Asian countries.\n",
         "#     Store in a variable called `regional`.\n",
+        "regional = qog[qog[\"region\"].isin([\"Africa\", \"Asia\"])]\n",
         "\n",
         "\n",
         "# 6e) In `regional`, calculate mean HDI by region AND freedom status.\n",
         "#     Which region-status combination has the lowest HDI?\n",
+        "print(\"Mean HDI by region and freedom status:\")\n",
+        "regional_hdi = regional.groupby([\"region\", \"fh_status\"])[\"hdi\"].mean()\n",
+        "print(regional_hdi)\n",
+        "print(\"Lowest HDI by region and freedom status:\")\n",
+        "print(regional_hdi.idxmin(), regional_hdi.min())\n",
         "\n",
         "\n",
         "# 6f) Create a new column in `regional` called \"dev_level\":\n",
@@ -1137,19 +1146,35 @@
         "#     - \"medium\" if 0.6 <= HDI < 0.8\n",
         "#     - \"low\" if HDI < 0.6\n",
         "#     Hint: use np.select([conditions], [choices], default=...)\n",
+        "regional[\"dev_level\"] = np.select(\n",
+        "    [\n",
+        "        regional[\"hdi\"] >= 0.8,\n",
+        "        (regional[\"hdi\"] >= 0.6) & (regional[\"hdi\"] < 0.8),\n",
+        "        regional[\"hdi\"] < 0.6,\n",
+        "    ],\n",
+        "    [\"high\", \"medium\", \"low\"],\n",
+        "    default=\"unknown\",\n",
+        ")\n",
         "\n",
         "\n",
         "# 6g) Count how many countries fall into each dev_level, grouped by region.\n",
-        "\n",
-        "\n",
+        "print(\"Number of countries by development level and region:\")\n",
+        "print(regional[\"dev_level\"].value_counts())\n",
         "# 6h) Load the PPI (Parliamentary Powers Index) data and merge with qog:\n",
-        "ppi = pd.read_csv(\"datasets/ppi.csv\")\n",
-        "# Merge keeping all qog countries (left join)\n",
+        "ppi = pd.read_csv(\"datasets/ppi.csv\").iloc[:, 1:]  # drop first column\n",
         "\n",
+        "ppi.rename(columns={\"ccodealp\": \"iso3c\", \"parl_power_index\": \"ppi\"}, inplace=True)\n",
+        "# Merge keeping all qog countries (left join)\n",
+        "merged = pd.merge(qog, ppi, on=\"iso3c\", how=\"left\")\n",
         "\n",
         "# 6i) Calculate the correlation between parliamentary power (ppi) and\n",
         "#     women in parliament (perc_wip). What do you find?\n",
-        "#     Hint: df[[\"col1\", \"col2\"]].corr()\n"
+        "#     Hint: df[[\"col1\", \"col2\"]].corr()\n",
+        "\n",
+        "correlation = merged[[\"ppi\", \"perc_wip\"]].corr()\n",
+        "print(\n",
+        "    f\"Correlation between parliamentary power and percentage of women in parliament: {correlation.loc['ppi', 'perc_wip']:.4f}\"\n",
+        ")"
       ]
     },
     {
